Refatora workflows de build e qualidade de código para simplificar a instalação de dependências e remover etapas desnecessárias

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,66 +8,47 @@ on:
   pull_request:
     branches: [ main, master ]
 
-env:
-  PHP_VERSION: '7.4'
-  NODE_VERSION: '14'
-
 jobs:
   test:
     name: PHP Tests
     runs-on: ubuntu-latest
+    container:
+      image: php:7.4-cli
     
-    services:
-      sqlite:
-        image: nouchka/sqlite3:latest
-        options: >-
-          --health-cmd "sqlite3 --version"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-
     steps:
     - uses: actions/checkout@v4
 
-    - name: Setup PHP
-      uses: shivammathur/setup-php@v2
-      with:
-        php-version: ${{ env.PHP_VERSION }}
-        extensions: mbstring, dom, fileinfo, sqlite, pdo_sqlite
-        coverage: xdebug
+    - name: Install dependencies
+      run: |
+        apt-get update && apt-get install -y \
+          git \
+          unzip \
+          libsqlite3-dev \
+          libzip-dev
+        docker-php-ext-install pdo_sqlite zip
 
-    - name: Get composer cache directory
-      id: composer-cache
-      run: echo "dir=$(composer config cache-files-dir)" >> $GITHUB_OUTPUT
+    - name: Install Composer
+      run: |
+        curl -sS https://getcomposer.org/installer | php
+        mv composer.phar /usr/local/bin/composer
 
     - name: Cache dependencies
       uses: actions/cache@v3
       with:
-        path: ${{ steps.composer-cache.outputs.dir }}
+        path: vendor
         key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
         restore-keys: ${{ runner.os }}-composer-
 
-    - name: Install dependencies
+    - name: Setup project
       run: |
-        composer install --prefer-dist --no-progress --no-suggest
+        composer install --prefer-dist --no-progress
         cp .env.example .env
         php artisan key:generate
-
-    - name: Create database
-      run: |
         mkdir -p database
         touch database/database.sqlite
-
-    - name: Run migrations
-      env:
-        DB_CONNECTION: sqlite
-        DB_DATABASE: database/database.sqlite
-      run: php artisan migrate --force
+        php artisan migrate --force
 
     - name: Execute tests
-      env:
-        DB_CONNECTION: sqlite
-        DB_DATABASE: database/database.sqlite
       run: vendor/bin/phpunit
 
   build-frontend:
@@ -80,14 +61,13 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: ${{ env.NODE_VERSION }}
+        node-version: '14'
         cache: 'npm'
     
-    - name: Install NPM dependencies
-      run: npm ci
-    
     - name: Build assets
-      run: npm run production
+      run: |
+        npm ci
+        npm run production
     
     - name: Upload assets
       uses: actions/upload-artifact@v3
@@ -123,19 +103,16 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
     
     - name: Extract metadata
-      id: meta
       uses: docker/metadata-action@v5
       with:
-        images: |
-          marcelofmatos/leegui
+        images: marcelofmatos/leegui
         tags: |
           type=ref,event=branch
           type=ref,event=pr
           type=semver,pattern={{version}}
-          type=semver,pattern={{major}}.{{minor}}
           type=raw,value=latest,enable={{is_default_branch}}
     
-    - name: Build and push Docker image
+    - name: Build and push
       uses: docker/build-push-action@v5
       with:
         context: .
@@ -145,29 +122,3 @@ jobs:
         labels: ${{ steps.meta.outputs.labels }}
         cache-from: type=gha
         cache-to: type=gha,mode=max
-        build-args: |
-          BUILD_DATE=${{ github.event.repository.updated_at }}
-          VCS_REF=${{ github.sha }}
-          VERSION=${{ steps.meta.outputs.version }}
-
-  security-scan:
-    name: Security Scan
-    runs-on: ubuntu-latest
-    needs: docker
-    if: github.event_name != 'pull_request'
-    
-    steps:
-    - uses: actions/checkout@v4
-    
-    - name: Run Trivy vulnerability scanner
-      uses: aquasecurity/trivy-action@master
-      with:
-        image-ref: 'marcelofmatos/leegui:${{ github.sha }}'
-        format: 'sarif'
-        output: 'trivy-results.sarif'
-    
-    - name: Upload Trivy scan results to GitHub Security tab
-      uses: github/codeql-action/upload-sarif@v2
-      if: always()
-      with:
-        sarif_file: 'trivy-results.sarif'
