--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,8 +24,10 @@ jobs:
           git \
           unzip \
           libsqlite3-dev \
-          libzip-dev
-        docker-php-ext-install pdo_sqlite zip
+          libzip-dev \
+          libldap2-dev
+        docker-php-ext-configure ldap --with-libdir=lib/x86_64-linux-gnu/
+        docker-php-ext-install pdo_sqlite zip ldap
 
     - name: Install Composer
       run: |
@@ -70,7 +72,7 @@ jobs:
         npm run production
     
     - name: Upload assets
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: frontend-assets
         path: |
@@ -87,7 +89,7 @@ jobs:
     - uses: actions/checkout@v4
     
     - name: Download frontend assets
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
         name: frontend-assets
         path: public/
