--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,15 +43,17 @@ jobs:
 
     - name: Setup project
       run: |
-        COMPOSER_DISCARD_CHANGES=true composer install --prefer-dist --no-progress --no-interaction --no-scripts
+        composer install --prefer-dist --no-progress --no-interaction
         cp .env.example .env
         sed -i 's/^APP_KEY=.*/APP_KEY=base64:72v5RiEiJd2GTMKw0oykkFu8SMVAdHlmUQqaVVMneE=/' .env
-        mkdir -p database
+        mkdir -p database bootstrap/cache
         touch database/database.sqlite
-        php artisan migrate --force --no-interaction
+        chmod -R 775 storage bootstrap/cache
+        php artisan migrate --force --no-interaction --env=testing
       env:
         DB_CONNECTION: sqlite
         DB_DATABASE: database/database.sqlite
+        APP_ENV: testing
 
     - name: Execute tests
       run: vendor/bin/phpunit
