Adiciona ambiente ao job de construção da imagem Docker

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -76,6 +76,7 @@ jobs:
   docker:
     name: Build Docker Image
     runs-on: ubuntu-latest
+    environment: actions
     needs: [test, build-frontend]
     
     steps:
