--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: php:7.4-cli
-    
+
     steps:
     - uses: actions/checkout@v4
 
@@ -50,20 +50,20 @@ jobs:
   build-frontend:
     name: Build Frontend Assets
     runs-on: ubuntu-latest
-    
+
     steps:
     - uses: actions/checkout@v4
-    
+
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
         node-version: '14'
-    
+
     - name: Build assets
       run: |
         npm install
         npm run production
-    
+
     - name: Upload assets
       uses: actions/upload-artifact@v4
       with:
@@ -76,29 +76,30 @@ jobs:
   docker:
     name: Build Docker Image
     runs-on: ubuntu-latest
-    environment: actions
+    environment: production
     needs: [test, build-frontend]
-    
+
     steps:
     - uses: actions/checkout@v4
-    
+
     - name: Download frontend assets
       uses: actions/download-artifact@v4
       with:
         name: frontend-assets
         path: public/
-    
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
-    
+
     - name: Log in to Docker Hub
       if: github.event_name != 'pull_request'
       uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-    
+
     - name: Extract metadata
+      id: meta
       uses: docker/metadata-action@v5
       with:
         images: marcelofmatos/leegui
@@ -107,7 +108,7 @@ jobs:
           type=ref,event=pr
           type=semver,pattern={{version}}
           type=raw,value=latest,enable={{is_default_branch}}
-    
+
     - name: Build and push
       uses: docker/build-push-action@v5
       with:
