--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -73,49 +73,49 @@ jobs:
           public/js/
           public/mix-manifest.json
 
-  # docker:
-  #   name: Build Docker Image
-  #   runs-on: ubuntu-latest
-  #   environment: production
-  #   needs: [test, build-frontend]
+  docker:
+    name: Build Docker Image
+    runs-on: ubuntu-latest
+    environment: production
+    needs: [test, build-frontend]
 
-  #   steps:
-  #   - uses: actions/checkout@v4
+    steps:
+    - uses: actions/checkout@v4
 
-  #   - name: Download frontend assets
-  #     uses: actions/download-artifact@v4
-  #     with:
-  #       name: frontend-assets
-  #       path: public/
+    - name: Download frontend assets
+      uses: actions/download-artifact@v4
+      with:
+        name: frontend-assets
+        path: public/
 
-  #   - name: Set up Docker Buildx
-  #     uses: docker/setup-buildx-action@v3
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
 
-  #   - name: Log in to Docker Hub
-  #     if: github.event_name != 'pull_request'
-  #     uses: docker/login-action@v3
-  #     with:
-  #       username: ${{ secrets.DOCKER_USERNAME }}
-  #       password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Log in to Docker Hub
+      if: github.event_name != 'pull_request'
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
-  #   - name: Extract metadata
-  #     id: meta
-  #     uses: docker/metadata-action@v5
-  #     with:
-  #       images: marcelofmatos/leegui
-  #       tags: |
-  #         type=ref,event=branch
-  #         type=ref,event=pr
-  #         type=semver,pattern={{version}}
-  #         type=raw,value=latest,enable={{is_default_branch}}
+    - name: Extract metadata
+      id: meta
+      uses: docker/metadata-action@v5
+      with:
+        images: marcelofmatos/leegui
+        tags: |
+          type=ref,event=branch
+          type=ref,event=pr
+          type=semver,pattern={{version}}
+          type=raw,value=latest,enable={{is_default_branch}}
 
-  #   - name: Build and push
-  #     uses: docker/build-push-action@v5
-  #     with:
-  #       context: .
-  #       platforms: linux/amd64,linux/arm64
-  #       push: ${{ github.event_name != 'pull_request' }}
-  #       tags: ${{ steps.meta.outputs.tags }}
-  #       labels: ${{ steps.meta.outputs.labels }}
-  #       cache-from: type=gha
-  #       cache-to: type=gha,mode=max
+    - name: Build and push
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        platforms: linux/amd64,linux/arm64
+        push: ${{ github.event_name != 'pull_request' }}
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
